public/styles.css
* {
  box-sizing: border-box;
}

@font-face {
  src: url(./assets/fonts/BOTWFont.ttf);
  font-family: zelda;
}

html,
body {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  background-color: black;
}
#root {
  height:100%;
  width: 700px;
  background-color:#030314;
  display: flex;
  justify-content: space-around;
}

.title {
  font-family: 'zelda';
  position: absolute;
  color: #1db95478;
  text-shadow: -3px 2px rgba(14, 36, 2, 0.897);
  font-size: 75px;
  z-index: 100;
}


.enter-button {
  cursor: pointer;
  position: absolute;
	bottom: 22%;
  font-size: 50px;
  font-family: 'zelda';
  width: 300px;
  height: 80px;
  text-align: center;
  color:#9ea59d;
	z-index: 100;
  border-radius: 35px;
  background-color: #1db95478;
  transition: all 0.3s;
  border: none;
  box-shadow: inset 0px 0px 5px #c1c1c1;
}

.enter-button:hover {
  width: 312px;
  height: 83px;
  font-size: 53px;
  background-color: #26d56378;
}

